[metadata]
name = aegir
author = James Foster
author_email = james.foster@stfc.ac.uk

[options]
package_dir=
    =src
packages=find:
install_requires =
    odin-control @ git+https://github.com/odin-detector/odin-control@1.1.0#egg=odin-control
    pyserial
    Adafruit_BBIO

[options.packages.find]
where=src

[options.extras_require]
test = 
    pytest
    pytest-cov
    tox
    flake8
    flake8-docstrings

[versioneer]
VCS = git
style = pep440
versionfile_source = src/aegir/_version.py
versionfile_build = aegir/_version.py
tag_prefix=

[flake8]
max-line-length = 100
extend-ignore = E203, W503
